--- a/BirdsEyeView/notebooks/Cam2BEV_dataset_helper.ipynb
+++ b/BirdsEyeView/notebooks/Cam2BEV_dataset_helper.ipynb
@@ -34,13 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "63ce4fd4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN_NUM_TO_KEEP = 22000\n",
-    "VAL_NUM_TO_KEEP = 1500\n",
+    "TRAIN_NUM_TO_KEEP = 20000\n",
+    "VAL_NUM_TO_KEEP = 800\n",
     "# DATA_ROOT_DIR = '/home/surya/Downloads/cam2bev-data-master/1_FRLR'\n",
     "DATA_ROOT_DIR = '/home/surya/Downloads/cam2bev-data-master-2_F/2_F'\n",
     "TRAIN_DIR = os.path.join(DATA_ROOT_DIR, *['train'])\n",
@@ -230,8 +230,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b7de6a85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reduceDataset(TRAIN_DIR, numberToKeep=TRAIN_NUM_TO_KEEP)\n",
+    "# reduceDataset(VAL_DIR, numberToKeep=VAL_NUM_TO_KEEP, reduceType='last')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "45f91784",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 16815.78it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 32246/32246 [14:31<00:00, 36.99it/s]\n"
      ]
     },
     {
@@ -259,41 +270,120 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3000/3000 [00:00<00:00, 21128.75it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 32246/32246 [10:38<00:00, 50.50it/s]\n"
      ]
     }
    ],
-   "source": [
-    "reduceDataset(TRAIN_DIR, numberToKeep=TRAIN_NUM_TO_KEEP)\n",
-    "# reduceDataset(VAL_DIR, numberToKeep=VAL_NUM_TO_KEEP, reduceType='last')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45f91784",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "resizeDataset(TRAIN_DIR, newWidth=512, newHeight=256)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "339dff57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/val/front\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3172/3172 [01:25<00:00, 36.98it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/val/bev+occlusion\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3172/3172 [01:02<00:00, 50.78it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "resizeDataset(VAL_DIR, newWidth=512, newHeight=256)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7cbb78e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/train/front\n",
+      "inputColorMap\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 32246/32246 [1:07:05<00:00,  8.01it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/train/bev+occlusion\n",
+      "outputColorMap\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 32246/32246 [57:16<00:00,  9.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/val/front\n",
+      "inputColorMap\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3172/3172 [04:54<00:00, 10.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/Downloads/cam2bev-data-master-2_F/2_F/val/bev+occlusion\n",
+      "outputColorMap\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3172/3172 [04:52<00:00, 10.83it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "replaceWithOhEncoding(TRAIN_DIR, labelDir='bev+occlusion', \n",
     "                      inputColorMap=inputPalette, outputColorMap=F_outputPallete)\n",
@@ -303,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9fac3e70",
    "metadata": {},
    "outputs": [],
@@ -337,72 +427,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "063710cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_dist = get_class_distribution(os.path.join(TRAIN_DIR, *['bev+occlusion']), outputPalette)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92b46b41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class_dist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77e4c8cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.set_printoptions(suppress=True, precision=6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cb64825",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classCounts = np.array(list(class_dist.values()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f16404d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classCounts * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ad6b53a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sum(classCounts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25d21f95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(1 / classCounts)/ np.sum(1 / classCounts)"
+    "# class_dist = get_class_distribution(os.path.join(TRAIN_DIR, *['bev+occlusion']), outputPalette)\n",
+    "# class_dist\n",
+    "# np.set_printoptions(suppress=True, precision=6)\n",
+    "# classCounts = np.array(list(class_dist.values()))\n",
+    "# classCounts * 100\n",
+    "# np.sum(classCounts)\n",
+    "# (1 / classCounts)/ np.sum(1 / classCounts)"
    ]
   }
  ],
