BEV references updated

--- a/BirdsEyeView/notebooks/cam2bev-front-unetxst-pytorch.ipynb
+++ b/BirdsEyeView/notebooks/cam2bev-front-unetxst-pytorch.ipynb
@@ -19,8 +19,7 @@
     "tags": []
    },
    "source": [
-    "# Welcome to the BEV Workshop\n",
-    "In this workshop, we'll learn how to convert a single Front-facing images to Birds Eye View (BEV) using Deep Learning Approaches\n",
+    "In this notebook, we'll learn how to convert a single Front-facing images to Birds Eye View (BEV) using Deep Learning Approaches\n",
     "\n",
     "![BEV_icon.png](attachment:61ac1bd9-ddf0-42c3-8a63-feeb15e390fc.png)\n",
     "\n",
@@ -2327,74 +2326,6 @@
    "outputs": [],
    "source": [
     "ani.save('BEV_FRONT_UNetXST_output.mp4', writer=writer, dpi=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "8e9e9c57",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-10-26T09:49:47.554272Z",
-     "iopub.status.busy": "2023-10-26T09:49:47.553354Z",
-     "iopub.status.idle": "2023-10-26T09:49:47.557915Z",
-     "shell.execute_reply": "2023-10-26T09:49:47.557014Z"
-    },
-    "papermill": {
-     "duration": 5.311197,
-     "end_time": "2023-10-26T09:49:47.559864",
-     "exception": false,
-     "start_time": "2023-10-26T09:49:42.248667",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# joinerModule.warpedOutput(True)\n",
-    "# joinerOutput, warped_outputs = joinerModule([encoderOutput for i in range(4)])   # simulate inputs from 4 cameras\n",
-    "# for d,lvl_output in enumerate(warped_outputs):\n",
-    "#     print(d, [x.shape for x in lvl_output])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "071954d9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-10-26T09:49:58.257893Z",
-     "iopub.status.busy": "2023-10-26T09:49:58.256999Z",
-     "iopub.status.idle": "2023-10-26T09:49:58.261854Z",
-     "shell.execute_reply": "2023-10-26T09:49:58.261002Z"
-    },
-    "papermill": {
-     "duration": 5.383008,
-     "end_time": "2023-10-26T09:49:58.263705",
-     "exception": false,
-     "start_time": "2023-10-26T09:49:52.880697",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# tempStnModule = STN(inputShape=(1,256,512), theta=H[-1]).to(device)\n",
-    "# testImg = rgbImage.astype(np.float32)\n",
-    "# testImg /= 255.0\n",
-    "# testImg = torch.from_numpy(testImg).unsqueeze(0).permute(0,3,1,2).to(device)\n",
-    "# output = tempStnModule(testImg)\n",
-    "\n",
-    "# outputImg = output.detach().cpu().numpy()[0]\n",
-    "# outputImg = (outputImg * 255).astype(np.uint8).reshape(256, 512,3)\n",
-    "\n",
-    "# fig, axes = plt.subplots(1, 2, figsize= (18, 12))\n",
-    "\n",
-    "# # plot Input images\n",
-    "# for (ax,img,title) in zip(axes.flatten(), [rgbImage, outputImg], ['RIGHT', 'H * RIGHT']):\n",
-    "#     plotImage(ax, img, title)\n",
-    "\n",
-    "# plt.show()"
    ]
   }
  ],
