--- a/BirdsEyeView/notebooks/cam2bev-unetxst-pytorch.ipynb
+++ b/BirdsEyeView/notebooks/cam2bev-unetxst-pytorch.ipynb
@@ -19,8 +19,7 @@
     "tags": []
    },
    "source": [
-    "# Welcome to the BEV Workshop\n",
-    "In this workshop, we'll learn how to convert multiple Front-facing images to Birds Eye View (BEV) using Deep Learning Approaches\n",
+    "In this notebook, we'll learn how to convert multiple Front-facing images to Birds Eye View (BEV) using Deep Learning Approaches\n",
     "\n",
     "![BEV_icon.png](attachment:61ac1bd9-ddf0-42c3-8a63-feeb15e390fc.png)\n",
     "\n",
@@ -2753,74 +2752,6 @@
    "outputs": [],
    "source": [
     "ani.save('BEV_output.mp4', writer=writer, dpi=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "185df3df",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-10-23T20:22:51.833346Z",
-     "iopub.status.busy": "2023-10-23T20:22:51.832337Z",
-     "iopub.status.idle": "2023-10-23T20:22:51.836939Z",
-     "shell.execute_reply": "2023-10-23T20:22:51.836014Z"
-    },
-    "papermill": {
-     "duration": 9.00373,
-     "end_time": "2023-10-23T20:22:51.838807",
-     "exception": false,
-     "start_time": "2023-10-23T20:22:42.835077",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# joinerModule.warpedOutput(True)\n",
-    "# joinerOutput, warped_outputs = joinerModule([encoderOutput for i in range(4)])   # simulate inputs from 4 cameras\n",
-    "# for d,lvl_output in enumerate(warped_outputs):\n",
-    "#     print(d, [x.shape for x in lvl_output])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "9a4e3554",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-10-23T20:23:09.964743Z",
-     "iopub.status.busy": "2023-10-23T20:23:09.963861Z",
-     "iopub.status.idle": "2023-10-23T20:23:09.968631Z",
-     "shell.execute_reply": "2023-10-23T20:23:09.967663Z"
-    },
-    "papermill": {
-     "duration": 8.980854,
-     "end_time": "2023-10-23T20:23:09.970589",
-     "exception": false,
-     "start_time": "2023-10-23T20:23:00.989735",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# tempStnModule = STN(inputShape=(1,256,512), theta=H[-1]).to(device)\n",
-    "# testImg = rgbImage.astype(np.float32)\n",
-    "# testImg /= 255.0\n",
-    "# testImg = torch.from_numpy(testImg).unsqueeze(0).permute(0,3,1,2).to(device)\n",
-    "# output = tempStnModule(testImg)\n",
-    "\n",
-    "# outputImg = output.detach().cpu().numpy()[0]\n",
-    "# outputImg = (outputImg * 255).astype(np.uint8).reshape(256, 512,3)\n",
-    "\n",
-    "# fig, axes = plt.subplots(1, 2, figsize= (18, 12))\n",
-    "\n",
-    "# # plot Input images\n",
-    "# for (ax,img,title) in zip(axes.flatten(), [rgbImage, outputImg], ['RIGHT', 'H * RIGHT']):\n",
-    "#     plotImage(ax, img, title)\n",
-    "\n",
-    "# plt.show()"
    ]
   }
  ],
