visualize pretrained model

--- a/End_to_End_Autonomous_Driving/notebooks/transfuser-carla.ipynb
+++ b/End_to_End_Autonomous_Driving/notebooks/transfuser-carla.ipynb
@@ -33,9 +33,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [00:01<00:00,  8.98it/s]\n",
+      "100%|██████████| 11/11 [00:01<00:00,  8.69it/s]\n",
       "Loading 16088 lidars from 11 folders\n",
-      "100%|██████████| 8/8 [00:00<00:00,  9.93it/s]\n",
+      "100%|██████████| 8/8 [00:00<00:00,  9.40it/s]\n",
       "Loading 11543 lidars from 8 folders\n",
       "There are 16088 samples in training set\n"
      ]
@@ -81,7 +81,7 @@
     "\n",
     "\n",
     "dataloader_train = DataLoader(train_set, shuffle=True, batch_size=2, worker_init_fn=seed_worker, generator=g_cuda, num_workers=4)\n",
-    "dataloader_valid   = DataLoader(val_set, shuffle=False, batch_size=2, worker_init_fn=seed_worker, generator=g_cuda, num_workers=4)\n"
+    "dataloader_val   = DataLoader(val_set, shuffle=False, batch_size=2, worker_init_fn=seed_worker, generator=g_cuda, num_workers=4)"
    ]
   },
   {
@@ -259,59 +259,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_EPOCHS = 1\n",
+    "# N_EPOCHS = 1\n",
     "\n",
-    "detailed_weights = {key: config.detailed_losses_weights[idx] for idx, key in enumerate(config.detailed_losses)}"
+    "# detailed_weights = {key: config.detailed_losses_weights[idx] for idx, key in enumerate(config.detailed_losses)}\n",
+    "\n",
+    "# train_results, val_results = train_validate_model(model, num_epochs=N_EPOCHS, model_name='Transfuser_regnet032', \n",
+    "#                                                   optimizer=optimizer,device = device, dataloader_train=dataloader_train, \n",
+    "#                                                   dataloader_valid = dataloader_val)\n",
+    "\n",
+    "# import pandas as pd\n",
+    "# train_results = pd.DataFrame(train_results)\n",
+    "# train_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load pretrained model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0:   0%|          | 2/8044 [00:16<18:37:29,  8.34s/batch, loss=302] \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_results, val_results = train_validate_model(model, num_epochs=N_EPOCHS, model_name='Transfuser_regnet032', \n",
-    "                                                  optimizer=optimizer,device = device, dataloader_train=dataloader_train, \n",
-    "                                                  dataloader_valid = dataloader_valid)"
+    "# from collections import OrderedDict\n",
+    "# new_state_dict = OrderedDict()\n",
+    "\n",
+    "# for k,v in checkpt.items():\n",
+    "#     new_key = k.replace(\"module.\", \"\")\n",
+    "#     if new_key != '_model.lidar_encoder._model.stem.conv.weight':\n",
+    "#         new_state_dict[new_key] = v\n",
+    "# torch.save(new_state_dict, 'transfuser_regnet032_seed1_39.pth')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'loss_wp': 0.0006791537137603002,\n",
-       "  'loss_bev': 0.00040492759244113583,\n",
-       "  'loss_depth': 0.0017792778427715861,\n",
-       "  'loss_semantic': 0.0007342136303386186,\n",
-       "  'loss_center_heatmap': 0.06452217045143314,\n",
-       "  'loss_wh': 4.535051852775889e-05,\n",
-       "  'loss_offset': 2.235929462697481e-05,\n",
-       "  'loss_yaw_class': 0.0003740036683198767,\n",
-       "  'loss_yaw_res': 1.0020414951985308e-08,\n",
-       "  'loss_velocity': 0.0,\n",
-       "  'loss_brake': 0.0,\n",
-       "  'weighted_loss': 0.06856146669696066}]"
+       "<All keys matched successfully>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_results"
+    "model.eval();\n",
+    "checkpt = torch.load('/home/surya/Downloads/transfuser-2022/model_ckpt/transfuser/transfuser_regnet032_seed1_39.pth', map_location=device)\n",
+    "model.load_state_dict(checkpt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.config.debug = True\n",
+    "test_data = next(iter(dataloader_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load data to gpu, according to type\n",
+    "for k in ['rgb', 'depth', 'lidar', 'label', 'ego_waypoint', \\\n",
+    "          'target_point', 'target_point_image', 'speed']:\n",
+    "    test_data[k] = test_data[k].to(device, torch.float32)\n",
+    "for k in ['semantic', 'bev']:\n",
+    "    test_data[k] = test_data[k].to(device, torch.long)"
    ]
   },
   {
@@ -320,81 +347,26 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>loss_wp</th>\n",
-       "      <th>loss_bev</th>\n",
-       "      <th>loss_depth</th>\n",
-       "      <th>loss_semantic</th>\n",
-       "      <th>loss_center_heatmap</th>\n",
-       "      <th>loss_wh</th>\n",
-       "      <th>loss_offset</th>\n",
-       "      <th>loss_yaw_class</th>\n",
-       "      <th>loss_yaw_res</th>\n",
-       "      <th>loss_velocity</th>\n",
-       "      <th>loss_brake</th>\n",
-       "      <th>weighted_loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000679</td>\n",
-       "      <td>0.000405</td>\n",
-       "      <td>0.001779</td>\n",
-       "      <td>0.000734</td>\n",
-       "      <td>0.064522</td>\n",
-       "      <td>0.000045</td>\n",
-       "      <td>0.000022</td>\n",
-       "      <td>0.000374</td>\n",
-       "      <td>1.002041e-08</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.068561</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    loss_wp  loss_bev  loss_depth  loss_semantic  loss_center_heatmap  \\\n",
-       "0  0.000679  0.000405    0.001779       0.000734             0.064522   \n",
-       "\n",
-       "    loss_wh  loss_offset  loss_yaw_class  loss_yaw_res  loss_velocity  \\\n",
-       "0  0.000045     0.000022        0.000374  1.002041e-08            0.0   \n",
-       "\n",
-       "   loss_brake  weighted_loss  \n",
-       "0         0.0       0.068561  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/surya/miniconda3/envs/tfuse/lib/python3.7/site-packages/mmdet/models/utils/gaussian_target.py:227: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
+      "  topk_clses = topk_inds // (height * width)\n",
+      "/home/surya/miniconda3/envs/tfuse/lib/python3.7/site-packages/mmdet/models/utils/gaussian_target.py:229: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
+      "  topk_ys = topk_inds // width\n"
+     ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "train_results = pd.DataFrame(train_results)\n",
-    "train_results"
+    "losses = model(test_data, save_path='.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
