visualize output initial commit

--- a/End_to_End_Autonomous_Driving/notebooks/visualize-transfuser-output.ipynb
+++ b/End_to_End_Autonomous_Driving/notebooks/visualize-transfuser-output.ipynb
@@ -33,11 +33,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [00:01<00:00,  7.78it/s]\n",
-      "Loading 16088 lidars from 11 folders\n",
-      "100%|██████████| 8/8 [00:00<00:00,  9.15it/s]\n",
+      "100%|██████████| 8/8 [00:00<00:00, 10.02it/s]\n",
       "Loading 11543 lidars from 8 folders\n",
-      "There are 16088 samples in training set\n"
+      "There are 11543 samples in validation set\n"
      ]
     }
    ],
@@ -47,9 +45,8 @@
     "\n",
     "root_dir = '/home/surya/Downloads/transfuser-2022/data/'\n",
     "config = GlobalConfig(root_dir=root_dir, setting='all')\n",
-    "train_set = CARLA_Data(root=config.train_data, config=config)\n",
     "val_set = CARLA_Data(root=config.val_data, config=config)\n",
-    "print(f\"There are {len(train_set)} samples in training set\")"
+    "print(f\"There are {len(val_set)} samples in validation set\")"
    ]
   },
   {
@@ -79,8 +76,6 @@
     "    np.random.seed(worker_seed)\n",
     "    random.seed(worker_seed)\n",
     "\n",
-    "\n",
-    "dataloader_train = DataLoader(train_set, shuffle=True, batch_size=2, worker_init_fn=seed_worker, generator=g_cuda, num_workers=4)\n",
     "dataloader_val   = DataLoader(val_set, shuffle=False, batch_size=2, worker_init_fn=seed_worker, generator=g_cuda, num_workers=4)"
    ]
   },
@@ -115,7 +110,7 @@
     }
    ],
    "source": [
-    "sample_data = next(iter(dataloader_train))\n",
+    "sample_data = next(iter(dataloader_val))\n",
     "print(f\"sample data is of type {type(sample_data)} and has following keys\")\n",
     "\n",
     "for k,v in sample_data.items():\n",
@@ -123,44 +118,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total trainable parameters:  168018327\n"
-     ]
+     "data": {
+      "text/plain": [
+       "11543"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from model import LidarCenterNet\n",
-    "model = LidarCenterNet(config, device, config.backbone, image_architecture='regnety_032', \n",
-    "                           lidar_architecture='regnety_032', use_velocity=False)\n",
-    "model.to(device);\n",
-    "\n",
-    "model_parameters = filter(lambda p: p.requires_grad, model.parameters())\n",
-    "params = sum([np.prod(p.size()) for p in model_parameters])\n",
-    "print ('Total trainable parameters: ', params)"
+    "len(val_set)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -171,7 +153,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model import LidarCenterNet\n",
+    "model = LidarCenterNet(config, device, config.backbone, image_architecture='regnety_032', \n",
+    "                           lidar_architecture='regnety_032', use_velocity=False)\n",
+    "model.to(device);\n",
+    "model.config.debug = True\n",
+    "\n",
+    "model.eval();\n",
+    "checkpt = torch.load('/home/surya/Downloads/transfuser-2022/model_ckpt/transfuser/transfuser_regnet032_seed1_39.pth', map_location=device)\n",
+    "model.load_state_dict(checkpt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,39 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.eval();\n",
-    "checkpt = torch.load('/home/surya/Downloads/transfuser-2022/model_ckpt/transfuser/transfuser_regnet032_seed1_39.pth', map_location=device)\n",
-    "model.load_state_dict(checkpt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.config.debug = True\n",
     "test_data = next(iter(dataloader_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,22 +218,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/surya/miniconda3/envs/tfuse/lib/python3.7/site-packages/mmdet/models/utils/gaussian_target.py:227: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
-      "  topk_clses = topk_inds // (height * width)\n",
-      "/home/surya/miniconda3/envs/tfuse/lib/python3.7/site-packages/mmdet/models/utils/gaussian_target.py:229: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
-      "  topk_ys = topk_inds // width\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# losses = model(test_data, save_path='.')"
+    "%timeit\n",
+    "_, debug_outputs = model(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "\n",
+    "for k,v in debug_outputs.items():\n",
+    "    debug_outputs[k] = v[i]\n",
+    "    print(k, debug_outputs[k].shape)\n",
+    "    print('--------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "debug_outputs['pred_semantic'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "debug_outputs['bboxes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(debug_outputs['pred_depth'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data['rgb'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(test_data['rgb'][0].detach().cpu().numpy().transpose(1,2,0))"
    ]
   },
   {
