--- a/End_to_End_Autonomous_Driving/notebooks/carla-dataset-eda.ipynb
+++ b/End_to_End_Autonomous_Driving/notebooks/carla-dataset-eda.ipynb
@@ -953,7 +953,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set = CARLA_Data(root=root_dir, config=config)\n"
+    "train_set = CARLA_Data(root='', config=config)"
    ]
   }
  ],
